# streamlit_openai_basic

./: .gitignore  Makefile  constants.py  custom_docs.py  gpt-gdrive.py  ingest.py  privateGPT.py  pyproject.toml  requirements.txt  streamlit-openai-basic.code-workspace  streamlit_app.py  workbench.ipynb
